; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/mlx4/extr_mad.c_fill_in_real_sgid_index.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/mlx4/extr_mad.c_fill_in_real_sgid_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_ib_dev = type { i32 }
%struct.rdma_ah_attr = type { i32 }
%struct.ib_global_route = type { i32 }

@IB_LINK_LAYER_INFINIBAND = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlx4_ib_dev*, i32, i32, %struct.rdma_ah_attr*)* @fill_in_real_sgid_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill_in_real_sgid_index(%struct.mlx4_ib_dev* %0, i32 %1, i32 %2, %struct.rdma_ah_attr* %3) #0 {
  %5 = alloca %struct.mlx4_ib_dev*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.rdma_ah_attr*, align 8
  %9 = alloca %struct.ib_global_route*, align 8
  store %struct.mlx4_ib_dev* %0, %struct.mlx4_ib_dev** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.rdma_ah_attr* %3, %struct.rdma_ah_attr** %8, align 8
  %10 = load %struct.rdma_ah_attr*, %struct.rdma_ah_attr** %8, align 8
  %11 = call %struct.ib_global_route* @rdma_ah_retrieve_grh(%struct.rdma_ah_attr* %10)
  store %struct.ib_global_route* %11, %struct.ib_global_route** %9, align 8
  %12 = load %struct.mlx4_ib_dev*, %struct.mlx4_ib_dev** %5, align 8
  %13 = getelementptr inbounds %struct.mlx4_ib_dev, %struct.mlx4_ib_dev* %12, i32 0, i32 0
  %14 = load i32, i32* %7, align 4
  %15 = call i64 @rdma_port_get_link_layer(i32* %13, i32 %14)
  %16 = load i64, i64* @IB_LINK_LAYER_INFINIBAND, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %22

18:                                               ; preds = %4
  %19 = load i32, i32* %6, align 4
  %20 = load %struct.ib_global_route*, %struct.ib_global_route** %9, align 8
  %21 = getelementptr inbounds %struct.ib_global_route, %struct.ib_global_route* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  br label %33

22:                                               ; preds = %4
  %23 = load %struct.mlx4_ib_dev*, %struct.mlx4_ib_dev** %5, align 8
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* %7, align 4
  %26 = call i64 @get_slave_base_gid_ix(%struct.mlx4_ib_dev* %23, i32 %24, i32 %25)
  %27 = load %struct.ib_global_route*, %struct.ib_global_route** %9, align 8
  %28 = getelementptr inbounds %struct.ib_global_route, %struct.ib_global_route* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = sext i32 %29 to i64
  %31 = add nsw i64 %30, %26
  %32 = trunc i64 %31 to i32
  store i32 %32, i32* %28, align 4
  br label %33

33:                                               ; preds = %22, %18
  ret void
}

declare dso_local %struct.ib_global_route* @rdma_ah_retrieve_grh(%struct.rdma_ah_attr*) #1

declare dso_local i64 @rdma_port_get_link_layer(i32*, i32) #1

declare dso_local i64 @get_slave_base_gid_ix(%struct.mlx4_ib_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
